--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,9 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "eslint": "^9.16.0",
+    "@eslint/js": "^9.19.0",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "prettier": "^3.4.2"
   }
 }
