--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "eslint": "^9.16.0",
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0",
     "prettier": "^3.4.2"
   }
 }
