--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
-    "eslint": "^9.20.0",
+    "eslint": "^9.26.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2"
   }
